--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "express-blog-routing",
+  "name": "express-blog-api-crud",
   "version": "1.0.0",
-  "main": "main.js",
+  "description": "- read - create",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": " node --watch --env-file=.env app.js"
+    "start": "node app.js",
+    "dev": "node --watch --env-file=.env app.js"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^4.21.1"
   },
   "devDependencies": {
-    "env": "^0.0.2"
+    "dotenv": "^16.4.5"
   }
 }
